# makec

./: CMakeLists.txt  README.md  eg.cpp  eg_lib.cpp  eg_lib.hpp  init.cpp  library.cpp  library.hpp
